logs/to_posgrest_v4.4/create_postgres_table_checkin/2023-03-20T16:04:41.940789+00:00/1.log
[2023-03-20 16:05:08,202] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v4.4.create_postgres_table_checkin manual__2023-03-20T16:04:41.940789+00:00 [queued]>
[2023-03-20 16:05:08,248] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v4.4.create_postgres_table_checkin manual__2023-03-20T16:04:41.940789+00:00 [queued]>
[2023-03-20 16:05:08,249] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 16:05:08,250] {taskinstance.py:1239} INFO - Starting attempt 1 of 2
[2023-03-20 16:05:08,250] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 16:05:08,294] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): create_postgres_table_checkin> on 2023-03-20 16:04:41.940789+00:00
[2023-03-20 16:05:08,302] {standard_task_runner.py:52} INFO - Started process 13052 to run task
[2023-03-20 16:05:08,310] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'to_posgrest_v4.4', 'create_postgres_table_checkin', 'manual__2023-03-20T16:04:41.940789+00:00', '--job-id', '87', '--raw', '--subdir', 'DAGS_FOLDER/to_postgresql.py', '--cfg-path', '/tmp/tmpd0861i32', '--error-file', '/tmp/tmppfrfz7b7']
[2023-03-20 16:05:08,313] {standard_task_runner.py:77} INFO - Job 87: Subtask create_postgres_table_checkin
[2023-03-20 16:05:08,626] {logging_mixin.py:109} INFO - Running <TaskInstance: to_posgrest_v4.4.create_postgres_table_checkin manual__2023-03-20T16:04:41.940789+00:00 [running]> on host 0b4cdb459521
[2023-03-20 16:05:08,955] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=sakabuana31
AIRFLOW_CTX_DAG_ID=to_posgrest_v4.4
AIRFLOW_CTX_TASK_ID=create_postgres_table_checkin
AIRFLOW_CTX_EXECUTION_DATE=2023-03-20T16:04:41.940789+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-20T16:04:41.940789+00:00
[2023-03-20 16:05:09,037] {base.py:79} INFO - Using connection to: id: postgres_localhost. Host: host.docker.internal, Port: 5432, Schema: final, Login: ***, Password: ***, extra: {}
[2023-03-20 16:05:09,117] {dbapi.py:225} INFO - Running statement: 
            create table if not exists checkin (
                business_id text FOREIGN KEY,
                date_values date PRIMARY KEY
            ) 
        , parameters: None
[2023-03-20 16:05:09,123] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "FOREIGN"
LINE 3:                 business_id text FOREIGN KEY,
                                         ^

[2023-03-20 16:05:09,263] {taskinstance.py:1277} INFO - Marking task as UP_FOR_RETRY. dag_id=to_posgrest_v4.4, task_id=create_postgres_table_checkin, execution_date=20230320T160441, start_date=20230320T160508, end_date=20230320T160509
[2023-03-20 16:05:09,308] {standard_task_runner.py:92} ERROR - Failed to execute job 87 for task create_postgres_table_checkin
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "FOREIGN"
LINE 3:                 business_id text FOREIGN KEY,
                                         ^

[2023-03-20 16:05:09,327] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-03-20 16:05:09,551] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
